panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_function_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro.c"
   (function-definition external stack-size=56
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (definition (x~2 `long` @0) (sign-extend `long` @0 (42 `int` @8)))
         (return
            (truncate `int` @8
               (add `long` @16
                  (multiply `long` @16
                     (sign-extend `long` @16 (2 `int` @24))
                     (x~2 `long` @0))
                  (sign-extend `long` @32 (1 `int` @40))))))))

----- stderr -----
