panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_line_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_line_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_line_macro.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=200
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~3 `array<int; 6>` @0)
            (braced
               (subobject +0 (7 `int` @0))
               (subobject +4 (7 `int` @4))
               (subobject +8 (8 `int` @8))
               (subobject +12 (9 `int` @12))
               (subobject +16 (10 `int` @16))))
         (expression
            (call `int` @24
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 23>>` @40
                        (string `array<char; 23>` @void "%zu %d %d %d %d %d %d\n\0"))))
               (6 `unsigned long` @48)
               (deref `int` @56
                  (ptr-add `ptr<int>` @64
                     (noop-type-conversion `ptr<int>` @64
                        (addressof `ptr<array<int; 6>>` @64
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @72 (0 `int` @80))))
               (deref `int` @72
                  (ptr-add `ptr<int>` @80
                     (noop-type-conversion `ptr<int>` @80
                        (addressof `ptr<array<int; 6>>` @80
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @88 (1 `int` @96))))
               (deref `int` @88
                  (ptr-add `ptr<int>` @96
                     (noop-type-conversion `ptr<int>` @96
                        (addressof `ptr<array<int; 6>>` @96
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @104 (2 `int` @112))))
               (deref `int` @104
                  (ptr-add `ptr<int>` @112
                     (noop-type-conversion `ptr<int>` @112
                        (addressof `ptr<array<int; 6>>` @112
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @120 (3 `int` @128))))
               (deref `int` @120
                  (ptr-add `ptr<int>` @128
                     (noop-type-conversion `ptr<int>` @128
                        (addressof `ptr<array<int; 6>>` @128
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @136 (4 `int` @144))))
               (deref `int` @136
                  (ptr-add `ptr<int>` @144
                     (noop-type-conversion `ptr<int>` @144
                        (addressof `ptr<array<int; 6>>` @144
                           (xs~3 `array<int; 6>` @0)))
                     (sign-extend `long` @152 (5 `int` @160))))))
         (return (16 `int` @24)))))

----- stderr -----
