panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_macro_expansion_is_not_recursive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (a~2 `int` @0) (10 `int` @0))
         (definition (b~3 `int` @4) (20 `int` @4))
         (definition (c~4 `int` @8) (30 `int` @8))
         (return
            (add `int` @12
               (add `int` @12
                  (add `int` @12
                     (a~2 `int` @0)
                     (5 `int` @16))
                  (3 `int` @16))
               (1 `int` @16))))))

----- stderr -----
